force-app/main/default/objects/SM_ContactSAP__c/SM_ContactSAP__c.object-meta.xml
<CustomObject>
    <description>To store incidents smile.</description>
    <label>Informations SI</label>
    <nameField>
        <label>contact SAP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SM_ContactSAP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>