force-app/main/default/objects/SM_ContactSAP__c/fields/NumCompteContrat__c.field-meta.xml
<CustomField>
    <fullName>NumCompteContrat__c</fullName>
    <label>Num de Compte Contrat</label>
    <length>80</length>
    <type>Text</type>
</CustomField>