force-app/main/default/objects/SM_ContactSAP__c/fields/Reference_Client__c.field-meta.xml
<CustomField>
    <fullName>Reference_Client__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SM_ContactSAP</relationshipLabel>
    <relationshipName>Contact_ContactSAP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>