force-app/main/default/objects/SM_ContactSAP__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Communication SI&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communication SI</fullName>
                <default>true</default>
                <label>Communication SI</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>